--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -21,10 +21,10 @@ jobs:
               with:
                   mdbook-version: "latest"
 
-            - run: cd mdbook && mdbook build
+            - run: mdbook build
 
             - name: deploy
               uses: peaceiris/actions-gh-pages@v3
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: ./mdbook/book
+                  publish_dir: ./book
