--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -2,7 +2,8 @@ name: mdbook
 
 on:
     push:
-        branches: [master]
+        #         branches: [master]
+        branches: [nothing]
 
 permissions:
     contents: write
